unpackaged/main/default/objects/Opportunity/fields/Checkbox_1__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox-1</label>
    <type>Checkbox</type>
</CustomField>