unpackaged/main/default/objects/Opportunity/fields/Checkbox_2__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox-2</label>
    <type>Checkbox</type>
</CustomField>