unpackaged/main/default/objects/Opportunity/fields/fieldA__c.field-meta.xml
<CustomField>
    <fullName>fieldA__c</fullName>
    <label>fieldA</label>
    <length>111</length>
    <type>Text</type>
</CustomField>