unpackaged/main/default/objects/Opportunity/fields/mandeep123__c.field-meta.xml
<CustomField>
    <fullName>mandeep123__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mandeep123</label>
    <type>Checkbox</type>
</CustomField>