unpackaged/main/default/objects/Opportunity/fields/mandeep2__c.field-meta.xml
<CustomField>
    <fullName>mandeep2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mandeep2</label>
    <type>Checkbox</type>
</CustomField>