unpackaged/main/default/objects/Opportunity/fields/mandeep_5__c.field-meta.xml
<CustomField>
    <fullName>mandeep_5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mandeep-5</label>
    <type>Checkbox</type>
</CustomField>