unpackaged/main/default/objects/Opportunity/fields/testing1__c.field-meta.xml
<CustomField>
    <fullName>testing1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>testing1</label>
    <type>Checkbox</type>
</CustomField>